--- a/projects/028.jsProjects/000.fiftyProjects/6-click.html
+++ b/projects/028.jsProjects/000.fiftyProjects/6-click.html
@@ -8,28 +8,28 @@
 </head>
 
 <body>
+    <!-- completed at 1PM/JULY24/2020 -->
     <script>
         let counter = 0;
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function(e) {
+            // creating elements-----------------------
             const msg = document.createElement('div');
             const btn = document.createElement('button');
             const msgTxt = document.createTextNode('click the button');
             const btnTxt = document.createTextNode('click me');
-            document.body.style.textAlign = "center";
             document.body.appendChild(msg);
             document.body.appendChild(btn);
             msg.appendChild(msgTxt);
             btn.appendChild(btnTxt);
-            msg.style.fontSize = '25px';
-            btn.style.cssText = "width:200px;height:35px;font-size:18px;background:lightblue;"
-            console.log('ready');
-
+            //styling elements------------------------
+            document.body.style.textAlign = "center";
+            msg.style.cssText = 'font-size:25px;font-family:fantasy;';
+            btn.style.cssText = "width:200px;height:35px;font-size:18px;background:orange;color:white;border-radius:3px;"
+            console.log('DOM is ready');
+            //adding function---------------------------
             btn.addEventListener('click', function() {
-                if (counter == 0) {
-                    counter = counter + 1;
-                    console.log(counter);
-
-                }
+                counter++;
+                msg.innerHTML = `You clicked ${counter} times!`;
             })
         })
     </script>
