--- a/projects/028.jsProjects/000.fiftyProjects/11-imagegen.html
+++ b/projects/028.jsProjects/000.fiftyProjects/11-imagegen.html
@@ -38,7 +38,7 @@
         })
 
         function clean(str) {
-            // removes hash # from inpAll
+            // remove hash # from color code
             // link doesn't need # hash
             return str.replace("#", "");
         }
