--- a/projects/028.jsProjects/000.fiftyProjects/12-tooltip.html
+++ b/projects/028.jsProjects/000.fiftyProjects/12-tooltip.html
@@ -36,12 +36,19 @@
         let myInterval;
         for (let i = 0; i < tooltips.length; i++) {
             const el = tooltips[i];
-            el.addEventListener("mouseover", function(e) {
-                let holder = this.getAttribute("data-toolContent");
+            el.addEventListener('mouseover', function(e) {
+                let holder = this.getAttribute('data-toolContent');
                 clearInterval(myInterval);
                 output.style.display = "block";
                 output.style.top = e.clientY + 5 + "px";
                 output.style.left = e.clientX + 5 + "px";
+                output.innerHTML = holder;
+                myInterval = setInterval(function(e) {
+                    output.style.display = "none";
+                }, 3000);
+            })
+            el.addEventListener('mouseout', function(e) {
+                output.style.display = "none";
             })
         }
     </script>
