problem 13-popup solved
function message(output) {
            output.classList.remove('hide')
            msg.innerText = output;
        }
problem: message atrribute = output & element name = output

solution: function message(str) {
            output.classList.remove('hide')
            msg.innerText = str;
        }

--- a/projects/028.jsProjects/000.fiftyProjects/13-popup.html
+++ b/projects/028.jsProjects/000.fiftyProjects/13-popup.html
@@ -68,9 +68,9 @@
             })
         }
 
-        function message(output) {
+        function message(str) {
             output.classList.remove('hide')
-            msg.innerText = output;
+            msg.innerText = str;
         }
     </script>
 </body>
