--- a/projects/028.jsProjects/000.fiftyProjects/15-imgpop.html
+++ b/projects/028.jsProjects/000.fiftyProjects/15-imgpop.html
@@ -58,6 +58,7 @@
 </head>
 
 <body>
+    <!-- Completed 3:50/July26/2020 -->
     <div class="pop">
         <img src="img/cabin.png" alt="cabin">
         <img src="img/cake.png" alt="cake">
