Complete 17-accordion.html

--- a/projects/028.jsProjects/000.fiftyProjects/17-accordion.html
+++ b/projects/028.jsProjects/000.fiftyProjects/17-accordion.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+    <!-- Completed at 5PM/July26/2020 -->
     <h3 class="main">
         1-Deserunt pariatur nostrud consequat eiusmod sit exercitation commodo est dolore dolor.
     </h3>
@@ -50,7 +51,7 @@
 
         main.forEach(function(el) {
             el.addEventListener('click', function() {
-                clearAct();
+                clearAct(); // closes the open paragraphs
                 el.nextElementSibling.classList.toggle('active');
             })
         })
