--- a/projects/028.jsProjects/000.fiftyProjects/20-starRating.html
+++ b/projects/028.jsProjects/000.fiftyProjects/20-starRating.html
@@ -37,6 +37,7 @@
 </head>
 
 <body>
+    <!-- Complete 6:35PM/July26/2020 -->
     <ul class="stars">
         <li class="star"><i class="fa fa-star fa-fw"></i></li>
         <li class="star"><i class="fa fa-star fa-fw"></i></li>
