--- a/index.html
+++ b/index.html
@@ -371,9 +371,9 @@
                     <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/emuallim" target="_blank">
                         <i class="fab fa-fw fa-github"></i>
                     </a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/jmuhiddin" target="_blank">
+                    <!-- <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/jmuhiddin" target="_blank">
                         <i class="fab fa-fw fa-facebook-f"></i>
-                    </a>
+                    </a> -->
                     <a class="btn btn-outline-light btn-social mx-1" href="https://t.me/Muhiddinjv" target="_blank">
                         <i class="fab fa-fw fa-telegram"></i>
                     </a>
