add react app to portfolio and create twitter clone

--- a/29-twitter/frontend/index.html
+++ b/29-twitter/frontend/index.html
@@ -20,9 +20,10 @@
       <button>Send Your Twit</button>
     </form>
     <div class="loading">
-      <img src="twitter.gif" alt="">
+      <img src="img/twitter.gif" alt="">
     </div>
+    <div class="twitDiv"></div>
   </main>
-  <script src="frontend.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
