--- a/29-twitter/frontend/index.html
+++ b/29-twitter/frontend/index.html
@@ -24,6 +24,6 @@
     </div>
     <div class="twitDiv"></div>
   </main>
-  <script src="index.js"></script>
+  <script src="client.js"></script>
 </body>
 </html>
