add my very first fully functioning REACT app to my projects

--- a/index.html
+++ b/index.html
@@ -200,6 +200,30 @@
                     </div>
                 </div>
 
+                <!-- Portfolio Item 31 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal31">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/proj-31.jpg" alt="">
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 32 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal32">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/proj-32.jpg" alt="">
+                    </div>
+                </div>
+
             </div>
             <!-- /.row -->
 
@@ -267,7 +291,7 @@
                 </div>
                 <div class="col-lg-4 mr-auto">
                     <p class="lead">
-                        I’ve built web applications using <b>HTML5, CSS3, SCSS, Bootstrap, Javascript, JQuery</b> (and React soon) and have a foundation in web design and development. I've completed 300 hours of
+                        I’ve built web applications using <b>HTML5, CSS3, SCSS, Bootstrap, Javascript, JQuery, REACT</b> and have a foundation in web design and development. I've completed 300 hours of
                         <a href="http://www.freecodecamp.org">
                             <i style="color: white;">“Responsive Web Design Projects”</i>
                         </a>
@@ -278,7 +302,7 @@
 
             <!-- About Section Button -->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/open?id=1IWbhyldtH9gJC2wGJgOh8H8F3aPc-s8Y" target="_blank">
+                <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1EviI7bwCXQMeHr0ifCG67sOwfOH3cdSg/view?usp=sharing" target="_blank">
                     <i class="fas fa-download mr-2"></i>Resume</a>
             </div>
 
@@ -732,6 +756,76 @@
                                 <p class="mb-5">I did the javascript part of this project. You can store data in a local storage and retrieve it later. You can add courses to a cart and it gets saved in the local storage and you can remove the items.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="projects/23-eCourses/index.html" target="_blank">See Page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 31 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal31" tabindex="-1" role="dialog" aria-labelledby="portfolioModal31Label" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                </button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title -->
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">FB Messenger Clone</h2>
+                                <!-- Icon Divider -->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image -->
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-31.jpg" alt="">
+                                <!-- Portfolio Modal - Text -->
+                                <p class="mb-5">August 6, 2020 - To build this app, I used the latest, fastest and coolest technologies such as REACT, Firebase (Google database service) and Material-ui (instead of Bootstrap). It's fully functional and all messages are stored in my Firebase database</p>
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="https://facebook-messenger-7818b.web.app" target="_blank">See Page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 32 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal32" tabindex="-1" role="dialog" aria-labelledby="portfolioModal32Label" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                </button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title -->
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">YouTube Clone</h2>
+                                <!-- Icon Divider -->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image -->
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-32.jpg" alt="">
+                                <!-- Portfolio Modal - Text -->
+                                <p class="mb-5">COMING SOON! COMING SOON! COMING SOON!</p>
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="#" target="_blank">See Page</a>
                             </div>
                         </div>
                     </div>
